tests/ui/const-generics/late-bound-vars/in_closure.stderr
error: cannot capture late-bound lifetime in constant
  --> $DIR/in_closure.rs:24:29
   |
LL | fn test<'a>() {
   |         -- lifetime defined here
LL |     let _ = || {
LL |         let _: [u8; inner::<'a>()];
   |                             ^^

error: cannot capture late-bound lifetime in constant
  --> $DIR/in_closure.rs:25:29
   |
LL | fn test<'a>() {
   |         -- lifetime defined here
...
LL |         let _ = [0; inner::<'a>()];
   |                             ^^

error: aborting due to 2 previous errors

